fix: update dependencies and improve Docker image handling
- Downgraded okhttp version from 4.12.0 to 3.14.9 and jackson version from 2.15.4 to 2.13.5 in pom.xml.
- Changed junit version from 5.10.1 to 4.13.2 and docker-java version from 3.3.4 to 3.2.14.
- Updated DockerImageService to use ResultCallback.Adapter for image push operations.
- Refactored URLEncoder usage in HarborImageService to consistently use "UTF-8".
- Adjusted the real image path in DockerImageServiceRealPerformanceTest for accuracy.